<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Contractor1099HourlyResultActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/arrow_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hourly_1099"
        android:id="@+id/hourly_1099"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hourly_rate_result"
        android:layout_alignTop="@+id/hourly_rate"
        android:layout_alignEnd="@+id/hourly_1099" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hourly_rate"
        android:id="@+id/hourly_rate"
        android:layout_below="@+id/arrow_back"
        android:layout_toEndOf="@+id/arrow_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reg_hour"
        android:id="@+id/reg_hour"
        android:layout_alignTop="@+id/reg_hr_result"
        android:layout_alignStart="@+id/hourly_rate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/overtime_result"
        android:layout_alignTop="@+id/reg_hour"
        android:layout_toStartOf="@+id/hourly_rate_result" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ovt_hour"
        android:id="@+id/ovt_hour"
        android:layout_alignTop="@+id/overtime_result"
        android:layout_toEndOf="@+id/hourly_rate_result" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/payroll_period"
        android:id="@+id/payroll_period"
        android:layout_below="@+id/reg_hr_result"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Weekly"
        android:id="@+id/payroll_period_result"
        android:layout_alignBottom="@+id/payroll_period"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/regular_hours"
        android:id="@+id/regular_hours"
        android:layout_below="@+id/payroll_period"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/reg_hour_result"
        android:layout_alignTop="@+id/regular_hours"
        android:layout_alignEnd="@+id/payroll_period_result" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/overtime_hours"
        android:id="@+id/ovt_hour_resultText"
        android:layout_below="@+id/regular_hours"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/ovt_hour_result"
        android:layout_alignBottom="@+id/ovt_hour_resultText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tips"
        android:id="@+id/tips"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/ovt_hour_resultText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tips_result"
        android:layout_alignTop="@+id/tips"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bonus"
        android:id="@+id/bonus"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/tips"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/bonus_result"
        android:layout_alignBottom="@+id/bonus"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/netPayCheck"
        android:id="@+id/netPayCheck"
        android:layout_below="@+id/bonus_result"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/netPayCheck_result"
        android:layout_alignBottom="@+id/netPayCheck"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_over"
        android:id="@+id/startOver"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/ovt_hour" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/reg_hr_result"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/hourly_rate"
        android:layout_toEndOf="@+id/bonus" />


</RelativeLayout>
