<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Contractor1099SalaryResultActivity">


    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/contractor1099_salary_result_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/btn_back"
        android:text="@string/contractor1099_salary_result_result" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_back"
        android:layout_marginStart="39dp"
        android:layout_toEndOf="@+id/contractor1099_salary_result_result"
        android:text="@string/save" />

    <TextView
        android:id="@+id/tv_payroll_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_back"
        android:layout_marginTop="25dp"
        android:text="@string/payroll_period" />

    <TextView
        android:id="@+id/tv_payroll_period_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_payroll_period"
        android:layout_alignBottom="@+id/tv_payroll_period"
        android:layout_alignEnd="@+id/save"
        android:layout_marginEnd="13dp" />

    <TextView
        android:id="@+id/tv_net_paycheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_payroll_period"
        android:layout_marginTop="24dp"
        android:text="@string/netPayCheck" />

    <TextView
        android:id="@+id/tv_net_paycheck_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_payroll_period_result"
        android:layout_alignTop="@+id/tv_net_paycheck"
        />

    <Button
        android:id="@+id/salary_startOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_over"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/contractor1099_salary_result_result" />


</RelativeLayout>

