<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/withHolding"
        android:id="@+id/withHolding"
        android:layout_alignBottom="@+id/back"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/allowance"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:text="@string/allowance"
        android:layout_alignBottom="@+id/et_allowance"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_allowance"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="98dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/maritalStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/allowance"
        android:layout_marginTop="57dp"
        android:text="@string/maritalStatus"
        android:layout_alignEnd="@+id/allowance" />

    <EditText
        android:id="@+id/et_maritalStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/maritalStatus"
        android:layout_toEndOf="@+id/allowance"
        android:ems="10"
        android:layout_alignStart="@+id/et_allowance" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/maritalStatus"
        android:layout_marginTop="57dp"
        android:text="@string/state"
        android:layout_alignEnd="@+id/maritalStatus" />

    <EditText
        android:id="@+id/et_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignBottom="@+id/state"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/et_maritalStatus" />


</RelativeLayout>
